[package]
name = "mc-oauth"
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
bytes = "1.0"
rsa = "0.9"
rand = "0.8"
pkcs8 = "0.10"
sha1 = "0.10"
aes = "0.8"
ctr = "0.9"
cfb8 = "0.8"
anyhow = "1.0.95"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = "0.12.12"
num-bigint = "0.4.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base64_light = "0.1.5"
toml = "0.8.20"
uuid = "1.13.1"
